Fixed folders locations problem Fixed a layout problem in 'top' class 0.9.2

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 	color:#999;
 	background-color:#EEE;
 }
-.top {
+tr.top {
 	font-size:12px;
 }
 .url {
